[package]
name = "tauri-plugin-fs-extra"
version = "0.0.0"
description = "Additional file system methods not included in the core API."
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
