[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Additional file system methods not included in the core API."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-fs-extra"
rust-version = { workspace = true }
version = "0.0.0"
